# Operating-systems-for-embedded-systems

./: README.md
.svn/: wc.db
myProject/: myProject2.uvguix.hubert  myProject2.uvguix.student  myProject2.uvoptx  myProject2.uvprojx  test
myProject/application/: test_cunit.cpp
myProject/osapi/: osapi_mortal_thread.h
myProject/osapi_test/: test_00_thread_name.cpp  test_01_thread_creation.cpp  test_02_thread_join.cpp  test_05_thread_priority.cpp  test_10_thread_stack_size.cpp  test_21_recursive_mutex.cpp  test_osapi.cpp
myProject_rtx/: myProject_rtx.uvoptx
myProject_rtx/application/: main.cpp
myProject_rtx/osapi/: osapi_mortal_thread.h
myProject_rtx/osapi_test/: test_01_thread_creation.cpp  test_02_thread_join.cpp  test_06_thread_priority_change.cpp  test_07_thread_run_detailed.cpp  test_08_thread_state.cpp  test_09_thread_suspend_inactive.cpp  test_10_thread_stack_size.cpp  test_osapi.cpp
myProject_windows/: CMakeLists.txt
myProject_windows/osapi/: osapi_mutex_interface.h
myProject_windows/osapi_test/: main.cpp  test_01_thread_creation.cpp  test_02_thread_join.cpp  test_03_thread_suspend_resume.cpp  test_06_thread_priority_change.cpp  test_08_thread_state.cpp  test_09_thread_suspend_inactive.cpp
osapi/: osapi.h
osapi/freertos/: osapi_freertos.cpp
osapi/windows/: osapi_thread_windows.h
osapi_test/: test_04_thread_delay.cpp  test_06_thread_priority_change.cpp  test_08_thread_state.cpp  test_30_mortal_thread.cpp  test_osapi.h
prime_numbers/: CMakeLists.txt
uml_cpp/: .clang-format  osfes_umlcpp.code-workspace
uml_cpp/osfes_umlcpp_00_warmup/: CMakeLists.txt
uml_cpp/osfes_umlcpp_07_inheritance/: CMakeLists.txt
uml_cpp/osfes_umlcpp_07_inheritance/test/.svn/: wc.db
(+44 files in other folders)
